fixed test for addnewexerciceUseCaseTest